tests/NormalTests/paczka1/fuzzy1/96982415.err
Error in line 2: S562 S562 47,4
Error in line 5: bib5kw5 S9c7 74,c
Error in line 1: 89js S562 92,7
Error in line 9: WGykD6 S168 13,3
Error in line 12: 89js S168 -1,2
Error in line 10: IvRRC S484 92,5
Error in line 7: bib5kw5 S562 96,8
Error in line 16: IvRRC S168 5,4
Error in line 20: IvRRC S937 11,0
Error in line 21: IvRRC S484 58,9
Error in line 24: IvRRC S937 31,4
Error in line 6: 89js S168 42,0
